syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.congthanh.project.grpc";

service CartService {
  rpc GetCart (CartRequest) returns (CartResponse) {}
}

message Cart {
  string product_id = 1;
  int32 quantity = 2;
}

message CartRequest {
  string product_id = 1;
  int32 quantity = 2;
}

message CartResponse {
  string product_id = 1;
  int32 quantity = 2;
}